--- a/08.Problem Solve/2022-03-14.ipynb
+++ b/08.Problem Solve/2022-03-14.ipynb
@@ -2,88 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "86ce1b37",
+   "execution_count": 3,
+   "id": "316bac91",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CBA\n",
-      "3\n",
-      "CBDAGE\n",
-      "#1 YES\n",
-      "FGCDAB\n",
-      "#2 NO\n",
-      "CTSBDEA\n",
-      "#3 YES\n"
+      "5\n",
+      "big\n",
+      "good\n",
+      "sky\n",
+      "blue\n",
+      "mouse\n",
+      "sky\n",
+      "good\n",
+      "mouse\n",
+      "big\n",
+      "blue\n"
      ]
     }
    ],
    "source": [
-    "# 교육과정 설계\n",
+    "# 단어 찾기\n",
     "\n",
-    "data = input().upper()\n",
-    "for i in range(int(input())):\n",
-    "    word = input().upper()\n",
-    "    result = []\n",
-    "    for j in data:\n",
-    "        cnt = 0\n",
-    "        for k in word:\n",
-    "            if j == k:\n",
-    "                result.append(cnt)\n",
-    "                break\n",
+    "from collections import deque\n",
+    "\n",
+    "n = int(input())\n",
+    "word_list = []\n",
+    "for i in range(n + (n - 1)):\n",
+    "    word_list.append(input().lower())\n",
+    "    \n",
+    "word_list = deque(word_list)\n",
+    "unwritten = []\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    unwritten.append(word_list.popleft())\n",
+    "    \n",
+    "for i in word_list:\n",
+    "    if i in unwritten: \n",
+    "        for j in unwritten:\n",
+    "            if unwritten[0] != i:\n",
+    "                unwritten.append(unwritten.pop(0))\n",
     "            else:\n",
-    "                cnt += 1\n",
-    "\n",
-    "    if min(result) == result[0] and max(result) == result[-1]:\n",
-    "        print('#{} YES'.format(i + 1))\n",
-    "    else:\n",
-    "        print('#{} NO'.format(i + 1))"
+    "                unwritten.pop(0)\n",
+    "                \n",
+    "for i in range(len(unwritten)):\n",
+    "    print(unwritten[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "7f61c7f9",
+   "execution_count": 11,
+   "id": "c83cc44d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CBA\n",
-      "3\n",
-      "CBDAGE\n",
-      "#1 YES\n",
-      "FGCDAB\n",
-      "#2 NO\n",
-      "CTSBDEA\n",
-      "#3 YES\n"
+      "5\n",
+      "big\n",
+      "good\n",
+      "sky\n",
+      "blue\n",
+      "mouse\n",
+      "sky\n",
+      "good\n",
+      "mouse\n",
+      "big\n",
+      "blue\n"
      ]
     }
    ],
    "source": [
-    "# 답안\n",
-    "from collections import deque\n",
+    "# 정답\n",
     "\n",
-    "need = input()\n",
     "n = int(input())\n",
+    "p = dict()\n",
     "for i in range(n):\n",
-    "    plan = input()\n",
-    "    dq = deque(need)\n",
-    "    for x in plan:\n",
-    "        if x in dq:\n",
-    "            if x != dq.popleft():\n",
-    "                print('#%d NO' %(i + 1))\n",
-    "                break\n",
-    "    else:\n",
-    "        if len(dq) == 0:\n",
-    "            print('#%d YES' %(i + 1))\n",
-    "        else:\n",
-    "            print('#%d NO' %(i + 1))"
+    "    word = input()\n",
+    "    p[word] = 1\n",
+    "for i in range(n - 1):\n",
+    "    word = input()\n",
+    "    p[word] = 0\n",
+    "for key, val in p.items():\n",
+    "    if val == 1:\n",
+    "        print(key)\n",
+    "        break"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "471bc0cf",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
