--- a/08.Problem Solve/2020-01-20.ipynb
+++ b/08.Problem Solve/2020-01-20.ipynb
@@ -832,7 +832,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -846,7 +846,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3560a4d4cbfa40fd0b7faec78b059a6c76203df81557d1677029d8669139df15"
+   }
   }
  },
  "nbformat": 4,
